force-app/main/default/objects/PricebookEntry/fields/Case_Safe_Price_Book_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Price_Book_Entry_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Safe Price Book Entry ID</label>
    <type>Text</type>
</CustomField>