force-app/main/default/objects/PricebookEntry/fields/Enqix_Pricebook_Entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Pricebook_Entry_ID__c</fullName>
    <externalId>true</externalId>
    <label>Enqix Pricebook Entry ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>