force-app/main/default/objects/PricebookEntry/fields/Shopify_Price_Book_Id__c.field-meta.xml
<CustomField>
    <fullName>Shopify_Price_Book_Id__c</fullName>
    <label>Shopify Product Variant Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>